--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2019.11.28
 chardet==3.0.4
 Django==2.2
 dnspython==1.16.0
+gunicorn==20.0.4
 idna==2.9
 jsonfield==3.1.0
 mysqlclient==1.4.6
